# giggityflix-tracker

./: README.md  pyproject.toml
src/: config.py  dependencies.py  main.py  models.py
src/giggityflix_tracker/: dependencies.py  main.py  models.py
src/giggityflix_tracker/services/: kafka_service.py  redis_service.py  subscription_service.py  tracker_service.py
src/grpc/: client.py  server.py
src/services/: kafka_service.py  redis_service.py  subscription_service.py  tracker_service.py
tests/: conftest.py
tests/services/: test_kafka_service.py  test_redis_service.py  test_subscription_service.py  test_tracker_service.py
